[gd_scene load_steps=3 format=3 uid="uid://ctv7377724hn4"]

[ext_resource type="Script" path="res://Scripts/WinScreen.gd" id="1_hvp21"]
[ext_resource type="AudioStream" uid="uid://bbd4xh3ngvbim" path="res://Music/chill-abstract-intention-12099.mp3" id="2_ijqpa"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 434.0
offset_top = 120.0
offset_right = 434.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.43256, 2.41824)
script = ExtResource("1_hvp21")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Winner" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "You Win!"

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="MainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ijqpa")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
